--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h3>Best score: <span id="max_score">0</span></h3>
         </div>
 
-        <div class="speed d-flex justify-content-between mt-4">
+        <div class="speed d-flex mt-4">
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="inlineRadioOptions" id="speed-1">
                 <label class="form-check-label" for="speed-1">Slow</label>
